[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/square.png" type="Texture" id=1]
[ext_resource path="res://scripts/vespa_inimigo.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 24 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -8, -24, 8, -24, 8, 24, -8, 24 )

[node name="vespa_inimigo" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="texture" type="Sprite" parent="."]
scale = Vector2( 1, 3 )
texture = ExtResource( 1 )

[node name="teto_collider" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( 0, -20 )

[node name="chao_collider" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="delay_tiro" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="tiro_position" type="Position2D" parent="."]

[connection signal="timeout" from="delay_tiro" to="." method="_on_delay_tiro_timeout"]
